added encryption methods
